ingress-ssb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssb
  namespace: csa-ssb
spec:
  rules:
  - host: myssb.apps.dlee1.cldr.example
    http:
      paths:
      - backend:
          service:
            name: ssb-sse
            port:
              number: 18121
        path: /
        pathType: Prefix
